--- a/src/apps/trace/traces/TracesDepthBar.css
+++ b/src/apps/trace/traces/TracesDepthBar.css
@@ -4,7 +4,7 @@
     border: 1px solid #333;
     position: absolute;
     top: 0;
-    left: 341px;
+    left: 290px;
 }
 
 .c-traces__depth-bar__chart {
