--- a/src/apps/trace/traces/TracesSettingsBar.css
+++ b/src/apps/trace/traces/TracesSettingsBar.css
@@ -5,7 +5,7 @@
     background-color: #191919;
     position: absolute;
     top: 0;
-    left: 261px;
+    left: 210px;
     color: #58c9c2;
     text-align: center;
 }
